--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,7 +19,7 @@
   </div>
   <div class="row">
     <div class="col-md-6">
-      <div class="card">
+      <div class="card max-height">
         <div class="card-body">
           <h3>Vad är industriradhus?</h3>
           <p>
@@ -72,8 +72,8 @@
         <div class="card-body">
           <h4>Kommande projekt</h4>
           <hr>
-          <div class="row text-center">
-            <div class="col" *ngFor="let project of projects">
+          <div class="row">
+            <div class="col" *ngFor="let project of getInactiveProjects()">
               <div class="card" *ngIf="!project.active">
                 <div class="card-body">
                   <h5>{{ project.name }}</h5>
