--- a/src/pages/unit/unit.html
+++ b/src/pages/unit/unit.html
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-md-9">
         <div class="card">
-          <div class="card-body">
+          <div class="card-body text-center">
               <h1 class="card-title">{{ unit.name }}</h1>
               <a *ngIf="project" [routerLink]="['/projekt', project.key]"><h5 class="card-title">{{ project.name }}</h5></a>
               <p [innerHtml]="unit.description"></p>
@@ -20,6 +20,9 @@
                 <a class="btn btn-outline-secondary btn-round" href="#carousel-images" role="button" data-slide="prev" style="margin-right: 5px;"><span class="fa fa-chevron-left"></span></a>
                 <a class="btn btn-outline-secondary btn-round" href="#carousel-images" role="button" data-slide="next"><span class="fa fa-chevron-right"></span></a>
             </div>
+            <div class="text-center m-2">
+              <a class="btn btn-outline-secondary" href="#" data-toggle="modal" [attr.data-target]="'#modal-images-' + unit.key">Visa alla</a>
+          </div>
             <br>
     
           </div>
