--- a/src/pages/project/project.html
+++ b/src/pages/project/project.html
@@ -36,6 +36,8 @@
     <div class="col-md-3">
         <div class="card max-height">
             <div class="card-body">
+                <h5 class="card-title">Faktaruta</h5>
+                <hr>
               <p class="card-text" *ngFor="let info of project.summary">
                 <b>{{ info.name }}</b>
                 <br>{{ info.value }}
