--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -16,36 +16,40 @@
             Vårt arbete ska bidra till att skapa väl fungerande industrikluster för dagens och morgondagens företagare. Med hållbart
             samhällsbyggande avser vi stärka de orter vi investerar i.
           </p>
+          <!--
           <br>
-          <h3>Pågående projekt</h3>
+          <h5>Projekt</h5>
           <div class="row">
-          <div class="card" *ngFor="let project of projects" style="margin-bottom: 20px; width: 11rem; margin:10px;">
-              <div class="card-body">
-                <h5 class="card-title">{{ project.city }}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">{{ project.name }}</h6>
-                <hr>
-                <p class="card-text">
-                  <b>Försäljningsstart</b>
-                  <br>{{ project.salesLaunch }}</p>
+            <div class="col" *ngFor="let project of projects">
+              <div class="card mx-auto" style="margin-bottom: 20px; margin:10px; width: 300px;">
+                <div class="card-body">
+                  <h5 class="card-title">{{ project.city }}</h5>
+                  <h6 class="card-subtitle mb-2 text-muted">{{ project.name }}</h6>
+                  <hr>
+                  <p class="card-text">
+                    <b>Försäljningsstart</b>
+                    <br>{{ project.salesLaunch }}</p>
+                </div>
               </div>
             </div>
           </div>
+          -->
         </div>
       </div>
     </div>
     <div class="col-md-3">
-        <div class="card" *ngIf="contact">
-            <img class="card-img-top" src="{{ '../assets/img/' + contact.photo.name }}" alt="Kontaktperson">
-    
-            <div class="card-body" align="center">
-    
-              <p class="card-text"><b>{{ contact.name }}</b></p>
-              <p class="card-text">{{ contact.phone }}</p>
-              <p class="card-text"><a href="{{ 'mailto:' + contact.email }}">{{ contact.email | truncate}}</a></p>
-            </div>
-          </div>
+      <div class="card" *ngIf="contact">
+        <img class="card-img-top" src="{{ '../assets/img/' + contact.photo.name }}" alt="Kontaktperson">
+
+        <div class="card-body" align="center">
+
+          <p class="card-text"><b>{{ contact.name }}</b></p>
+          <p class="card-text">{{ contact.phone }}</p>
+          <p class="card-text"><a href="{{ 'mailto:' + contact.email }}">{{ contact.email | truncate}}</a></p>
+        </div>
+      </div>
     </div>
-  </div>c
+  </div>
 </div>
 <br><br><br><br><br><br>
 <app-footer></app-footer>
